--- a/styles/header.css
+++ b/styles/header.css
@@ -53,6 +53,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  cursor: pointer;
 }
 .search-button .tooltip, 
 .voice-search-button .tooltip,
